# ai-company-analysis

./: .gitignore  start-api.bat  start-web.bat
apps/api/: Dockerfile  fly.toml  package.json  pyproject.toml
apps/api/app/: config.py
apps/api/app/api/routes/: diagnosis.py
apps/api/app/db/: session.py
apps/api/app/models/: base.py  diagnosis.py  financial_data.py  lead.py
apps/api/app/services/report/: pdf_renderer.py
apps/web/: next.config.ts
apps/web/src/app/: globals.css
